# api-comunidade-iv

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  database.db  manage.py  pyproject.toml
.contrib/: todos.md
.github/: pull_request_template.md
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_role_alter_user_role.py  0003_remove_user_role_remove_user_groups_and_more.py  0004_initial.py
core/: settings.py  urls.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_created_at_alter_post_updated_at.py  0003_alter_post_id_comment.py  0004_rename_author_comment_comment_author_and_more.py  0005_alter_post_post_title.py  0006_alter_comment_comment_author_alter_post_post_author.py
